<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <Button
        android:id="@+id/alertDialog1btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_1btn" />
    <Button
        android:id="@+id/alertDialog3bts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_3bts" />
    <Button
        android:id="@+id/alertDialogList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_list" />
    <Button
        android:id="@+id/alertDialogListSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_list_single" />
    <Button
        android:id="@+id/alertDialogListMulti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_list_multi" />
</LinearLayout>